top display, will fix spacing

--- a/Day-II-Calculator/calculator/src/App.css
+++ b/Day-II-Calculator/calculator/src/App.css
@@ -40,3 +40,14 @@ body, html {
     align-items: flex-start;
     flex-wrap: wrap;
 }
+
+.display { 
+    height: 100px;
+    width: 45%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    background-color: darkgrey;
+}
